--- a/main.ipynb
+++ b/main.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
     "    env.render()\n",
     "    time.sleep(0.02)\n",
     "    a = model.target_policy(s)\n",
-    "    s, _, _, _, _ = env.step(a)\n",
+    "    s, _, _, term, _ = env.step(a)\n",
     "\n",
     "env.close()"
    ]
@@ -507,6 +507,15 @@
    "outputs": [],
    "source": [
     "model._preprocessor.running_mean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
    ]
   },
   {
