--- a/main.ipynb
+++ b/main.ipynb
@@ -479,21 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#halt calculations in previous cell and run this one to see how the agent performs with current target policy\n",
     "import time\n",
-    "\n",
-    "ENV = gym.make('LunarLanderContinuous-v2')\n",
-    "env=EnvWrapper(ENV)\n",
+    "env = gym.make(ENV)\n",
+    "env=EnvWrapper(env)\n",
     "s = env.reset()\n",
     "term = False\n",
     "\n",
     "while not term:\n",
     "    env.render()\n",
-    "    time.sleep(0.02)\n",
+    "    #time.sleep(0.02)\n",
     "    a = model.target_policy(s)\n",
     "    s, _, _, term, _ = env.step(a)\n",
     "\n",
