--- a/main.ipynb
+++ b/main.ipynb
@@ -354,7 +354,7 @@
     "ENV = 'LunarLanderContinuous-v2'\n",
     "gamma = 1.\n",
     "\n",
-    "mem_size = 1e4#github: 5e5\n",
+    "mem_size = 1e4#5e5\n",
     "pre_explore_episodes = 10\n",
     "batch_size = 64\n",
     "\n",
@@ -362,7 +362,7 @@
     "ou_sigma = 0.3\n",
     "ou_sigma_min = 0.05\n",
     "ou_dt = 1.\n",
-    "n_steps_annealing = 1e5#!!5e5\n",
+    "n_steps_annealing = 1e5#5e5\n",
     "\n",
     "hidden1a = 128\n",
     "hidden2a = 64\n",
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "#main #this is where all learning takes place\n",
+    "#this is where all learning takes place\n",
     "\n",
     "while True:\n",
     "    a = model.step(s1)\n",
