--- a/main.ipynb
+++ b/main.ipynb
@@ -233,9 +233,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.utils.data, random\n",
+    "import random\n",
     "\n",
-    "class RingBuffer(torch.utils.data.Dataset):\n",
+    "class RingBuffer:\n",
     "\n",
     "    def __init__(self, maxlen):\n",
     "        super(RingBuffer, self).__init__()\n",
