--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "#random processes\n",
-    "\n",
     "import torch\n",
     "import math\n",
     "\n",
@@ -277,12 +276,12 @@
     "        self._tmax = env._max_episode_steps\n",
     "    \n",
     "    def reset(self):\n",
-    "        return self._add_time(self._env.reset())\n",
+    "        return torch.from_numpy(self._env.reset()).float().to(torch.device('cuda'))\n",
     "\n",
     "    def step(self, a):\n",
     "        a = (self._a_max + self._a_min) * 0.5 + a.cpu().numpy() * (self._a_max - self._a_min) * 0.5\n",
     "        s, r, t, _ = self._env.step(a)\n",
-    "        return self._add_time(s),\\\n",
+    "        return torch.from_numpy(s).float().to(torch.device('cuda')),\\\n",
     "           torch.tensor([r], dtype=torch.float, device=torch.device('cuda')),\\\n",
     "           torch.tensor([t], dtype=torch.float, device=torch.device('cuda')), t, r\n",
     "    \n",
@@ -290,10 +289,7 @@
     "        self._env.render()\n",
     "    \n",
     "    def close(self):\n",
-    "        self._env.close()\n",
-    "    \n",
-    "    def _add_time(self, s):\n",
-    "        return torch.from_numpy(s).float().to(torch.device('cuda'))"
+    "        self._env.close()"
    ]
   },
   {
@@ -303,7 +299,6 @@
    "outputs": [],
    "source": [
     "#initialize everything. all parameters are in this cell\n",
-    "\n",
     "ENV = 'LunarLanderContinuous-v2'\n",
     "gamma = 0.98\n",
     "\n",
@@ -406,7 +401,6 @@
    ],
    "source": [
     "#this is where all learning takes place\n",
-    "\n",
     "while True:\n",
     "    a = model.step(s1)\n",
     "    s2, r, t, term, r_ = env.step(a)\n",
@@ -459,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,13 +480,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stepan/.local/lib/python3.6/site-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type ActorCritic. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n",
+      "/home/stepan/.local/lib/python3.6/site-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type L4Actor. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n",
+      "/home/stepan/.local/lib/python3.6/site-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type L4Critic. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
    "source": [
     "#save model\n",
     "torch.save(model, \"model.pt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
